--- a/app/composer.json
+++ b/app/composer.json
@@ -20,6 +20,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/mime": "5.1.*",
+        "symfony/orm-pack": "^1.1",
         "symfony/security-bundle": "5.1.*",
         "symfony/translation": "5.1.*",
         "symfony/validator": "5.1.*",
@@ -27,6 +28,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.19",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
