--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       # command: --max-allowed-packet=67108864 --sql_mode="STRICT_ALL_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER"
       ports:
         - 8086:3306
+        - 8087:33060
 
     apache:
       build:
@@ -31,7 +32,7 @@ services:
       ports:
         - "8081:80"
       environment:
-        MYSQL_URL: "mysql://root:root@db/db"
+        DATABASE_URL: "mysql://root:root@db/db"
     maildev:
       image: djfarrelly/maildev
       ports:
