--- a/app/composer.json
+++ b/app/composer.json
@@ -28,8 +28,10 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.19",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/var-dumper": "5.1.*"
     },
     "config": {
         "optimize-autoloader": true,
