--- a/app/composer.json
+++ b/app/composer.json
@@ -12,6 +12,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "mailjet/mailjet-apiv3-php": "^1.4",
         "scylabs/neptune-bundle": "^1.4",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/asset": "5.1.*",
