--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.3",
+        "doctrine/common": "^2",
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/doctrine-migrations-bundle": "^2",
+        "doctrine/orm": "^2",
         "mailjet/mailjet-apiv3-php": "^1.4",
         "scylabs/neptune-bundle": "^1.4",
         "stof/doctrine-extensions-bundle": "^1.4",
@@ -14,7 +19,6 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/mime": "5.1.*",
-        "symfony/orm-pack": "^1.1",
         "symfony/security-bundle": "5.1.*",
         "symfony/translation": "5.1.*",
         "symfony/validator": "5.1.*",
@@ -23,10 +27,12 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "symfony/debug-pack": "^1.0",
+        "symfony/debug-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.19",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "5.1.*"
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/var-dumper": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     },
     "config": {
         "optimize-autoloader": true,
